--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,12 @@
 host aws
-user dpetters
-HostName ec2-23-22-89-148.compute-1.amazonaws.com
+user ubuntu
+HostName ec2-50-19-165-56.compute-1.amazonaws.com
+
+host prod
+user root
+HostName umeqo.com
+
+host staging
+user root
+HostName staging.umeqo.com
 
