--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,10 @@ host mit
 user dpetters
 HostName linerva.mit.edu
 
+host hippo
+user dpetters
+HostName hippo.csail.mit.edu
+
 host aws
 user ubuntu
 HostName ec2-50-19-165-56.compute-1.amazonaws.com
