new ec2 instance

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,7 +8,7 @@ HostName hippo.csail.mit.edu
 
 host aws
 user ubuntu
-HostName ec2-50-19-165-56.compute-1.amazonaws.com
+HostName ec2-54-213-166-3.us-west-2.compute.amazonaws.com
 
 host prod
 user root
