location of aws key

--- a/.ssh/config
+++ b/.ssh/config
@@ -9,6 +9,7 @@ HostName hippo.csail.mit.edu
 host aws
 user ubuntu
 HostName ec2-54-213-166-3.us-west-2.compute.amazonaws.com
+IdentityFile ~/Dropbox/docs/keys/aws/rootkey.pem
 
 host prod
 user root
