added rhino to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,10 @@ host mit
 user dpetters
 HostName linerva.mit.edu
 
+host rhino
+user dpetters
+HostName rhino.csail.mit.edu
+
 host hippo
 user dpetters
 HostName hippo.csail.mit.edu
