--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [user]
     name = Dmitrij Petters
     email = Dpetters91@gmail.com
+[core]
+    autocrlf=true
 [diff]
     tool = vimdiff
 [merge]
